# chatty

./: .gitignore  Dockerfile  README.md  docker-compose.yml.example
.devcontainer/: devcontainer.json
application/: .env.example  Cargo.toml  main.rs
application/business/: Cargo.toml
application/business/src/: lib.rs
application/business/src/actions/: company.rs  conversation.rs  lead.rs  manager.rs
application/business/src/actions/deprecated/: email.rs  import.rs
application/business/src/service/: company.rs  lead.rs  lead_log.rs  manager.rs  mod.rs
application/business/src/test/: company.rs  lead.rs  manager.rs  mod.rs
application/business/src/various/: auth.rs  policies.rs
application/domain/: Cargo.toml
application/domain/src/: lib.rs
application/domain/src/dto/: company.rs  lead.rs  manager.rs  mod.rs
application/domain/src/entities/: company.rs  lead.rs  lead_log.rs  manager.rs  mod.rs
application/domain/src/repositories/: company.rs  lead.rs  manager.rs
application/domain/src/scope/: company.rs  lead.rs  manager.rs
application/domain/src/source/: mod.rs
application/domain/src/source/repository/: delete.rs  read.rs  write.rs
application/domain/src/source/scope/: mod.rs
application/http/: Cargo.toml
application/http/src/: lib.rs
application/http/src/handler/: company.rs  conversation.rs  deperecated.rs  lead.rs  manager.rs  mod.rs
application/http/src/middleware/: mod.rs
application/http/src/router/: mod.rs
application/http/src/server/: mod.rs
application/system/: Cargo.toml
application/system/src/: lib.rs
application/system/src/config/: mod.rs
application/system/src/database/postgres/: connection.rs  credentials.rs
application/system/src/database/postgres/migration/: Cargo.toml
application/system/src/database/postgres/migration/src/: lib.rs  m20220101_000001_create_managers_table.rs  m20220101_000002_create_companies_table.rs  m20220101_000003_create_leads_table.rs  m20220101_000004_create_lead_log_table.rs  main.rs
application/system/src/email/: mod.rs
application/system/src/email/gmail/: client.rs  extensions.rs  mod.rs
application/system/src/email/gmail/credentials/: mod.rs
application/system/src/email/shared/: models.rs  service.rs  traits.rs
application/system/src/exception/: impl.rs  mod.rs  model.rs
application/system/src/models/: list.rs  shared.rs
application/system/src/various/: auth.rs  bcrypt.rs  http.rs  jwt.rs  mod.rs  validation.rs
