# [package]
# name = "mail_handler"
# version = "0.1.0"
# edition = "2021"

# [workspace]
# members = [
#     "src/system/database/postgres/migration", "."
# ]

[package]
name = "chatty"
version = "0.0.1"
edition = "2021"
default-run = "chatty"

[[bin]]
name = "chatty"
path = "main.rs"

[workspace]
members = [ 
    "http",
    "business",
    "domain",
    "system",
    "system/src/database/postgres/migration"
]

# exclude = [
#     "system/src/database/postgres/migration"
# ]

resolver = "1"

[dependencies]
http = { path = "http" }
system = { path = "system" }
dotenv = "0.15.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }