[package]
name = "http"
version = "0.1.0"
edition = "2021"


[dependencies]
system = { path = "../system" }
business = { path = "../business" }
domain = { path = "../domain" }

axum = {version = "0.7.5", features = ["macros", "multipart"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.11.3"