[package]
name = "system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lettre = "0.11.7"
google-gmail1 = "5.0.5"
once_cell = "1.19.0"
regex = "1.7.3"
bcrypt = "0.15.1"
jsonwebtoken= "9.3.0"
reqwest = "0.12.4"
serde_json = "1.0.70"
validator = { version = "0.18.1", features = ["derive"] }
thiserror = "1.0.63"
serde = { version = "1.0.130", features = ["derive"] }
axum = {version = "0.7.5", features = ["macros", "multipart"] }
sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "debug-print", "postgres-array" ] }
